--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="main">
-	<div class="main" id="main1"></div>
+	<div class="main active" id="main1"></div>
 	<div class="main" id="main2"></div>
 	<div class="main" id="main3"></div>
 </div>
@@ -18,11 +18,9 @@
 <script type="text/javascript">
     var banner = new EasyBanner({
         wrap:'#main',
-        banner:'.main',
-        leftArrow:'12',
-        rightArrow:'12',
+        img:'.main',
+        method:'fade',
     });
-    banner.test();
 </script>
 </body>
 </html>
