--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="main">
-	<div class="main active" id="main1"></div>
+	<div class="main" id="main1"></div>
 	<div class="main" id="main2"></div>
 	<div class="main" id="main3"></div>
 </div>
@@ -21,6 +21,7 @@
         img:'.main',
         method:'fade',
     });
+    console.log(banner.main);
 </script>
 </body>
 </html>
