--- a/index.html
+++ b/index.html
@@ -14,13 +14,43 @@
 	<div class="main" id="main2"></div>
 	<div class="main" id="main3"></div>
 </div>
+<div class="mainBtn1">
+    <div class="btn1"></div>
+    <div class="btn1"></div>
+    <div class="btn1"></div>
+</div>
+<div id="maina">
+    <div class="main" id="maina1"></div>
+    <div class="main" id="maina2"></div>
+    <div class="main" id="maina3"></div>
+    <div class="clear"></div>
+</div>
+<div class="mainBtna1">
+    <div class="btna1"></div>
+    <div class="btna1"></div>
+    <div class="btna1"></div>
+</div>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript">
-    var banner = new EasyBanner({
+    var banner2 = new EasyBanner({
+        wrap:'#maina',
+        img:'.main',
+        method:'slide',
+        btn:'.btna1',
+        mode : 'click',//开启被动模式后，被控制,将不会初始化点击事件
+    });
+    var banner1 = new EasyBanner({
         wrap:'#main',
         img:'.main',
+        btn:'.btn1',
         method:'fade',
+        control:[{
+            object: banner2,//控制对象
+            delay : 500,//执行延时
+        }],//被作为控制机使用,在作为控制机使用的时候需要在从机的下方，因为在上方的时候从机还没有定义，会出现未定义错误
+        waterMark:true,
     });
+    
     //dev
 </script>
 </body>
