change file name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="btna1"></div>
     <div class="btna1"></div>
 </div>
-<script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/EasyBanner.js"></script>
 <script type="text/javascript">
     var banner2 = new EasyBanner({
         wrap:'#maina',
