--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         wrap:'#maina',
         img:'.main',
         method:'slide',
+        displacement:0.5,
+        direction:'top',
         btn:'.btna1',
-        mode : 'click',//开启被动模式后，被控制,将不会初始化点击事件
+        mode : 'passive',//开启被动模式后，被控制,将不会初始化点击事件
     });
     var banner1 = new EasyBanner({
         wrap:'#main',
@@ -46,7 +48,7 @@
         method:'fade',
         control:[{
             object: banner2,//控制对象
-            delay : 500,//执行延时
+            delay : 0,//执行延时
         }],//被作为控制机使用,在作为控制机使用的时候需要在从机的下方，因为在上方的时候从机还没有定义，会出现未定义错误
         waterMark:true,
     });
