--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         wrap:'#main',
         img:'.main',
         btn:'.btn1',
-        method:'fade',
+        method:'film',
         leftArrow:'.prev',
-        easing:'easeInOutBack',
+//        easing:'easeInOutBack',
+        easing:'easeInOutQuint',
         rightArrow:'.next',
         control:[{
             object: banner2,//控制对象
