--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>订制轮播</title>
+	<title>EasyBanner</title>
 	<meta charset="utf-8">
 </head>
 <link rel="stylesheet" href="../src/style/style.css">
