--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 	<title>EasyBanner</title>
 	<meta charset="utf-8">
 </head>
-<link rel="stylesheet" href="../src/style/style.css">
+<link rel="stylesheet" href="style/style.css">
 <script type="text/javascript" src="../src/script/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../src/script/jquery.easing.min.js"></script>
 <body>
