--- a/example/index.html
+++ b/example/index.html
@@ -54,7 +54,8 @@
         displacement:0.5,
         direction:'left',
         btn:'.btnb1',
-        mode : 'passive'//开启被动模式后，被控制,将不会初始化点击事件
+        //开启被动模式后，被控制,将不会初始化点击事件
+        mode : 'passive'
     });
 
     var banner2 = new EasyBanner({
@@ -65,7 +66,8 @@
         direction:'right',
         btn:'.btna1',
         easing:'easeInOutQuint',
-        mode : 'passive'//开启被动模式后，被控制,将不会初始化点击事件
+        //开启被动模式后，被控制,将不会初始化点击事件
+        mode : 'passive'
     });
 
     var banner1 = new EasyBanner({
@@ -77,14 +79,17 @@
         easing:'easeInOutQuint',
         rightArrow:'.next',
         interval:3000,
-        control:[{
-            object: banner2,//控制对象
-            delay : 500//执行延时
-        },{
-            object: banner3,//控制对象
-            delay : 100//执行延时
-        }],//被作为控制机使用,在作为控制机使用的时候需要在从机的下方，因为在上方的时候从机还没有定义，会出现未定义错误
-        waterMark:true
+        //被作为控制机使用,在作为控制机使用的时候需要在从机的下方，因为在上方的时候从机还没有定义，会出现未定义错误
+        control:[
+            {
+                object: banner2,//控制对象
+                delay : 500//执行延时
+            },
+            {
+                object: banner3,//控制对象
+                delay : 100//执行延时
+            }
+        ]
     });
 
 </script>
